apps/shda-chat/overlays/aws-us-west-2-cc-smarsh-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shda-chat
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: shda-chat
      app.kubernetes.io/instance: shda-chat
  template:
    spec:
      containers:
        - name: shda-chat
          resources:
            limits:
              cpu: 2000m
              memory: 3G
              ephemeral-storage: 2G
            requests:
              cpu: 100m
              memory: 1G
              ephemeral-storage: 256M
